--- a/css/notes.css
+++ b/css/notes.css
@@ -1,6 +1,6 @@
 .notes-container {
-  column-count: 4; 
-  column-gap: 1rem; 
+  column-count: 4;
+  column-gap: 1rem;
   padding: 20px 30px;
 }
 @media (max-width:900px) {
@@ -19,19 +19,19 @@
   }
 }
 
+
+
+.note-card,
 .note {
-    background: #FFE2E2; 
-    color: white;
-    padding: 1rem;
-    margin-bottom: 1rem; 
-    border-radius: 8px;
-    display: inline-block; 
-    width: 100%; 
-    box-shadow: 0 4px 6px rgba(0,0,0,0.1);
-    transition: transform 0.2s;
-    color: black;
-    
-  }
+  display: inline-block;
+  width: 100%; 
+  margin: 0 0 1rem;
+  border-radius: 8px;
+  box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+  
+  break-inside: avoid;
+}
+
 .note:hover {
     transform: translateY(-5px);
   }
@@ -57,15 +57,16 @@
   border: none;
 }
 .note-card {
-  background: #FFFACD; 
+  
   border-radius: 8px;
   padding: 1rem;
   box-shadow: 0 4px 6px rgba(0,0,0,0.1);
   display: flex;
   flex-direction: column; 
   width: 100%;
-  max-width: 350px; 
-  min-height: 200px;       
+  max-width: 312px; 
+  min-height: 200px;  
+       
    break-inside: avoid;
 }
 
