--- a/css/notes.css
+++ b/css/notes.css
@@ -1,36 +1,72 @@
-.notes-container {
+.notes-container,
+.pinned-container {
   column-count: 4;
   column-gap: 1rem;
-  padding: 20px 30px;
+  width: 100%;
 }
-@media (max-width:900px) {
-  .notes-container{
+.pinned-container{
+  margin-top: 50px;
+}
+.pinned-title {
+  display: none; 
+  margin: 10px 0;
+  font-size: 20px;
+  color: #4B5563;
+}
+
+.note-card {
+  display: inline-block;       
+  width: 100%;                
+  min-height: 100px;
+  break-inside: avoid-column;       
+ display: flex;
+  flex-direction: column; 
+ 
+  border-radius: 8px;
+  padding: 1rem;
+  box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+   margin-bottom: 1rem;
+  color: rgb(61, 61, 61);
+}
+.note-card2 {
+  display: inline-block;       
+  width: 60%;                
+  
+  break-inside: avoid-column;       
+ display: flex;
+  flex-direction: column; 
+ 
+  border-radius: 8px;
+  padding: 1rem;
+  box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+   
+  color: rgb(61, 61, 61);
+}
+.note-card.is-pinned {
+  border: 2px solid #f5c518; /* yellow highlight */
+}
+
+@media (max-width: 900px) {
+  .notes-container,
+  .pinned-container {
     column-count: 3;
   }
 }
-@media (max-width:800px) {
-  .notes-container{
+@media (max-width: 800px) {
+  .notes-container,
+  .pinned-container {
     column-count: 2;
   }
 }
-@media (max-width:600px) {
-  .notes-container{
+@media (max-width: 600px) {
+  .notes-container,
+  .pinned-container {
     column-count: 1;
   }
 }
 
 
 
-.note-card,
-.note {
-  display: inline-block;
-  width: 100%; 
-  margin: 0 0 1rem;
-  border-radius: 8px;
-  box-shadow: 0 4px 6px rgba(0,0,0,0.1);
-  
-  break-inside: avoid;
-}
 
 .note:hover {
     transform: translateY(-5px);
@@ -56,19 +92,7 @@
   background-color: transparent;
   border: none;
 }
-.note-card {
-  
-  border-radius: 8px;
-  padding: 1rem;
-  box-shadow: 0 4px 6px rgba(0,0,0,0.1);
-  display: flex;
-  flex-direction: column; 
-  width: 100%;
-  max-width: 312px; 
-  min-height: 200px;  
-       
-   break-inside: avoid;
-}
+
 
 .note-header {
   display: flex;
@@ -91,8 +115,8 @@
   background: transparent;
    color:rgb(61, 61, 61);
   font-size: 20px;
-  font-weight: 500;
-  font-family: 'Patrick Hand', cursive;
+  
+ 
 }
 .title-input::placeholder{
    color:rgb(61, 61, 61);
@@ -107,7 +131,7 @@
   background: transparent;
   margin: 8px 0;
  color:rgb(61, 61, 61);
- font-family: 'Patrick Hand', cursive;
+  font-family: 'Roboto', sans-serif;
 }
 
 .foter-container {
@@ -160,4 +184,15 @@ button{
 }
 .fonter-leftSide{
   display: flex;
+}
+.actualNote-title{
+  font-size: 20px;
+}
+.actualNote-content{
+  font-size: 18px;
+}
+.title-input:empty:before {
+  content: attr(data-placeholder);
+  color: #aaa;        /* placeholder color */
+  pointer-events: none;
 }
